<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:orientation="vertical"
    tools:context="pl.cudakwiatki.cudakwiatki_contact.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/florist"
        android:textSize="@dimen/title_text"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/main_photo_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/bouquet_pink" />

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="@color/transparent"
            android:contentDescription="@string/logo_desc"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="8dp"
            android:rotation="-20"
            android:scaleType="fitStart"
            android:src="@drawable/logo_cuda_kwiatki_aa2053_600px" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:gravity="bottom|start"
        android:paddingEnd="16dp"
        android:paddingLeft="24dp"
        android:paddingRight="16dp"
        android:paddingStart="24dp"
        android:text="@string/order_flowers"
        android:textAllCaps="true"
        android:textSize="@dimen/contact_details_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/web_icon_desc"
            android:paddingBottom="5dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/home_300px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:text="@string/web_address"
            android:textSize="@dimen/contact_details_text"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/email_icon_desc"
            android:paddingBottom="5dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/email_300px" />

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:text="@string/email"
            android:textSize="@dimen/contact_details_text"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/fb_icon_desc"
            android:paddingBottom="5dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/fb_300px" />

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:text="@string/fb_contact"
            android:textSize="@dimen/contact_details_text"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/phone_icon_desc"
            android:paddingBottom="5dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/phone_300px" />

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoLink="phone"
            android:gravity="start|center_vertical"
            android:text="@string/phone"
            android:textSize="@dimen/contact_details_text"
            android:textStyle="normal" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/motto"
        android:textColor="@android:color/white"
        android:textSize="@dimen/motto_text"
        android:textStyle="italic|bold" />
</LinearLayout>
